--- a/web/css/components/info-panel.css
+++ b/web/css/components/info-panel.css
@@ -2,8 +2,8 @@
 
 .info-panel {
     position: absolute;
-    top: 4rem;
-    right: 1rem;
+    bottom: 16px;
+    right: 16px;
     width: 320px;
     max-height: calc(100% - 5rem);
     background: var(--overlay-bg);
